表紙ののコードを追加

--- a/report.tex
+++ b/report.tex
@@ -31,6 +31,22 @@
 
 \begin{document}
 
+% 表紙が必要な場合
+\begin{titlepage}
+\begin{center}
+\vspace*{150truept}
+{\huge  タイトル}\\
+\vspace{120truept}
+{\huge 所属：}\\
+\vspace{30truept}
+{\huge 学籍番号：}\\
+\vspace{30truept}
+{\huge 氏名：}\\
+\vspace{30truept}
+{\huge \today}\\
+\end{center}
+\end{titlepage}
+
 \maketitle
 
 % ソースコード貼り付け用
