--- a/report.tex
+++ b/report.tex
@@ -4,26 +4,7 @@
 
 % ソースコード貼り付け用のプリアンブル
 \usepackage{listings, jlisting}
-\lstset{%
-  language={},
-  basicstyle={\small},%
-  identifierstyle={\small},%
-  commentstyle={\small\itshape},%
-  keywordstyle={\small\bfseries},%
-  ndkeywordstyle={\small},%
-  stringstyle={\small\ttfamily},
-  frame={tb},
-  breaklines=true,
-  columns=[l]{fullflexible},%
-  numbers=left,%
-  xrightmargin=0zw,%
-  xleftmargin=3zw,%
-  numberstyle={\scriptsize},%
-  stepnumber=1,
-  numbersep=1zw,%
-  lineskip=-0.5ex%
-}
-\renewcommand{\lstlistingname}{プログラム}
+\input{lstset.tex}
 
 \title{タイトル}
 \author{所属 \\ 学籍番号　名前}
